# startreusableapp

./: README.md  startreusableapp.py
template_files/: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  api_views.py  api_views_oauth.py  base.html  ci.yml  conftest.py  example_command.py  index-bootstrap.html  models_oauth.py  pyproject.toml  pytest.ini  serializers.py  serializers_oauth.py  setup-with-requirements.py  setup.py  test_api.py  test_models.py  test_settings.py  urls-with-drf.py  urls-with-oauth.py  urls-with-view.py  views.py
